[package]
name = "no"
version = "0.1.0"
authors = ["ramn <github@rymdimperiet.org>"]
description = "no - output the string 'n' repeatedly until killed"

documentation = "https://docs.rs/no"
homepage = "https://github.com/ramn/no"
repository = "https://github.com/ramn/no"
readme = "README.md"
license = "Apache-2.0"
keywords = ["unix", "no"]

[dependencies]
