[package]
authors = ["ramn <github@rymdimperiet.org>"]
description = """
no - output the string 'n' repeatedly until killed.
Source: https://github.com/ramn/no"""
documentation = "https://docs.rs/no"
homepage = "https://github.com/ramn/no"
keywords = ["unix", "no"]
license = "Apache-2.0"
name = "no"
readme = "README.md"
repository = "https://github.com/ramn/no"
version = "0.3.1"

[dependencies]
clap = "~2.24.0"
